--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,11 @@
-# Windows image file caches
+#Only need to remove the stupid files.
+#Obviously we arent compiling a program...
+
+#############
+## WindowsBS
+#############
 Thumbs.db
-ehthumbs.db
-
-# Folder config file
+ehthumbs.dbs
 Desktop.ini
-
-# Recycle Bin used on file shares
 $RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must ends with two \r.
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
